stgV23.1：フィルター切り出し

--- a/index.html
+++ b/index.html
@@ -889,326 +889,6 @@ const LS_KEY_SUBCTRL = "user_subcontrols_collapsed_v1";
 let gSubCtrlCollapsed = !!loadLocalJSON(LS_KEY_SUBCTRL, false);
 function setSubCtrlCollapsed(v){ gSubCtrlCollapsed = !!v; saveLocalJSON(LS_KEY_SUBCTRL, gSubCtrlCollapsed); }
 
-/* === Gacha Filter UI (button + popover) === */
-const GachaFilter = (() => {
-  let wrap, btn, pop;
-  let options = [];                 // ['ガチャA','ガチャB',...]
-  let selected = '*';               // '*' or Set<string>
-  let autoCloseTimer = null;
-  const AUTO_CLOSE_MS = 1800;
-
-  function init(){
-    wrap = document.getElementById('gachaFilterWrap');
-    btn  = document.getElementById('gachaFilterBtn');
-    pop  = document.getElementById('gachaPopover');
-    if(!wrap || !btn || !pop) return;
-
-    btn.addEventListener('click', () => {
-      if (wrap.classList.contains('open')) close(); else open();
-    });
-
-    // 外側クリックで閉じる
-    document.addEventListener('pointerdown', (e)=>{
-      if (!wrap?.classList.contains('open')) return;
-      const t = e.target;
-      // ★ ポップオーバーを body に移動している間も“内側”として扱う
-      if (wrap.contains(t) || pop.contains(t)) return;
-      close();
-    });
-
-    // 無操作で閉じる（ポップオーバー内の活動で延長）
-    ['pointerdown','pointermove','wheel','keydown'].forEach(ev=>{
-      pop.addEventListener(ev, bumpAutoClose, {passive:true});
-    });
-    btn.addEventListener('pointerdown', bumpAutoClose, {passive:true});
-
-    // ★★★ 重要：init 後に “現在の options” で必ず UI を再構築する
-    // （setOptions が先に呼ばれていても、ここで描画が起きるようにする）
-    setOptions(options);
-  }
-
-  function bumpAutoClose(){
-    if (autoCloseTimer) clearTimeout(autoCloseTimer);
-    autoCloseTimer = setTimeout(close, AUTO_CLOSE_MS);
-  }
-
-  let cleanupPortal = null;
-  function open(){
-    if(!wrap) return;
-    wrap.classList.add('open');
-    btn.setAttribute('aria-expanded','true');
-    cleanupPortal = openFloatingPopover(wrap, btn, pop);  // ★ ここでポータル表示
-    pop.focus();
-    bumpAutoClose();
-  }
-  function close(){
-    if(!wrap) return;
-    wrap.classList.remove('open');
-    btn.setAttribute('aria-expanded','false');
-    if (cleanupPortal) { cleanupPortal(); cleanupPortal = null; } // ★ 復帰
-    if (autoCloseTimer) { clearTimeout(autoCloseTimer); autoCloseTimer = null; }
-  }
-
-  function setOptions(arr){
-    options = Array.from(new Set(arr.filter(Boolean)));
-    // 初回/空選択は「全選択」
-    if (selected !== '*' && selected.size === 0) selected = '*';
-
-    // UI再構築
-    if (pop){
-      pop.innerHTML = '';
-      // 先頭：全選択トグル
-      const all = document.createElement('div');
-      all.className = 'gf-item gf-all';
-      all.setAttribute('role', 'option');
-      all.setAttribute('aria-selected', selected === '*' ? 'true' : 'false');
-      all.innerHTML = `<span class="gf-check">${selected==='*' ? '✓' : ''}</span><span class="gf-name">すべて（全選択/全解除）</span>`;
-      all.addEventListener('click', () => {
-        if (selected === '*') {
-          selected = new Set();      // いったん空にして…
-          updateButtonLabel();
-          renderItems();             // その後に全解除
-        } else {
-          selected = '*';            // 全選択
-        }
-        updateButtonLabel();
-        renderItems();
-        notify();
-      });
-      pop.appendChild(all);
-
-      // 仕切り
-      const hr = document.createElement('div');
-      hr.style.height = '1px';
-      hr.style.background = 'linear-gradient(90deg,transparent,rgba(255,255,255,.08),transparent)';
-      hr.style.margin = '6px 4px';
-      pop.appendChild(hr);
-
-      // 項目群
-      renderItems();
-    }
-    updateButtonLabel();
-  }
-
-  function renderItems(){
-    // 既存の項目は全削除（先頭の2ノード = 全選択行, 仕切り を残す）
-    while (pop.children.length > 2) pop.removeChild(pop.lastChild);
-
-    const selSet = selected === '*' ? new Set(options) : new Set(selected);
-    options.forEach(name => {
-      const row = document.createElement('div');
-      row.className = 'gf-item';
-      row.setAttribute('role','option');
-      row.setAttribute('aria-selected', selSet.has(name) ? 'true' : 'false');
-      row.innerHTML = `<span class="gf-check">${selSet.has(name) ? '✓' : ''}</span><span class="gf-name" title="${name}">${name}</span>`;
-      row.addEventListener('click', () => {
-        // '*' を具体セットに置き換えてからトグル
-        let s = selected === '*' ? new Set(options) : new Set(selected);
-        if (s.has(name)) s.delete(name); else s.add(name);
-        // 0件は '*'（すべて）へフォールバック
-        selected = s.size === 0 ? '*' : s;
-        updateButtonLabel();
-        renderItems();
-        notify();
-      });
-      pop.appendChild(row);
-    });
-  }
-
-  function updateButtonLabel(){
-    if (!btn) return;
-    if (selected === '*') { btn.textContent = 'すべて'; return; }
-    const n = selected.size;
-    if (n === 1){ btn.textContent = Array.from(selected)[0]; }
-    else { btn.textContent = `${n}項目`; }
-  }
-
-  function getSelection(){
-    return selected === '*' ? '*' : new Set(selected);
-  }
-  function setSelection(v){
-    selected = (v === '*' ? '*' : new Set(v));
-    updateButtonLabel();
-    renderItems();
-  }
-  let onChange = null;
-  function notify(){ if (typeof onChange === 'function') onChange(getSelection()); }
-
-  return { init, setOptions, getSelection, setSelection, open, close,
-           set onChange(fn){ onChange = fn; }, updateButtonLabel };
-})();
-document.addEventListener('DOMContentLoaded', () => GachaFilter.init());
-
-/* === Rarity Filter UI (button + popover) === */
-const RarityFilter = (() => {
-  let wrap, btn, pop;
-  let options = [];                 // ['UR','SSR',...]
-  let selected = '*';               // '*' or Set<string>
-  let autoCloseTimer = null;
-  const AUTO_CLOSE_MS = 1800;
-
-  function init(){
-    wrap = document.getElementById('rarityFilterWrap');
-    btn  = document.getElementById('rarityFilterBtn');
-    pop  = document.getElementById('rarityPopover');
-    if(!wrap || !btn || !pop) return;
-
-    btn.addEventListener('click', () => {
-      if (wrap.classList.contains('open')) close(); else open();
-    });
-    document.addEventListener('pointerdown', (e)=>{
-      if (!wrap?.classList.contains('open')) return;
-      const t = e.target;
-      // ★ ガチャと同様、浮かせたポップオーバー内クリックは閉じない
-      if (wrap.contains(t) || pop.contains(t)) return;
-      close();
-    });
-    ['pointerdown','pointermove','wheel','keydown'].forEach(ev=>{
-      pop.addEventListener(ev, bumpAutoClose, {passive:true});
-    });
-    btn.addEventListener('pointerdown', bumpAutoClose, {passive:true});
-    setOptions(options);
-  }
-  function bumpAutoClose(){ if (autoCloseTimer) clearTimeout(autoCloseTimer); autoCloseTimer = setTimeout(close, AUTO_CLOSE_MS); }
-
-  let cleanupPortal = null;
-
-  function open(){
-    if(!wrap) return;
-    wrap.classList.add('open');
-    btn.setAttribute('aria-expanded','true');
-    cleanupPortal = openFloatingPopover(wrap, btn, pop);
-    pop.focus();
-    bumpAutoClose();
-  }
-
-  function close(){
-    if(!wrap) return;
-    wrap.classList.remove('open');
-    btn.setAttribute('aria-expanded','false');
-    if (cleanupPortal) { cleanupPortal(); cleanupPortal = null; }
-    if (autoCloseTimer) { clearTimeout(autoCloseTimer); autoCloseTimer = null; }
-  }
-
-  function setOptions(arr){
-    options = Array.from(new Set(arr.filter(Boolean)));
-    if (selected !== '*' && selected.size === 0) selected = '*';
-
-    if (pop){
-      pop.innerHTML = '';
-      const all = document.createElement('div');
-      all.className = 'gf-item gf-all';
-      all.setAttribute('role','option');
-      all.setAttribute('aria-selected', selected === '*' ? 'true' : 'false');
-      all.innerHTML = `<span class="gf-check">${selected==='*' ? '✓' : ''}</span><span class="gf-name">すべて（全選択/全解除）</span>`;
-      all.addEventListener('click', () => {
-        selected = (selected === '*') ? new Set() : '*';
-        updateButtonLabel(); renderItems(); notify();
-      });
-      pop.appendChild(all);
-
-      const hr = document.createElement('div');
-      hr.style.height='1px';
-      hr.style.background='linear-gradient(90deg,transparent,rgba(255,255,255,.08),transparent)';
-      hr.style.margin='6px 4px';
-      pop.appendChild(hr);
-
-      renderItems();
-    }
-    updateButtonLabel();
-  }
-
-  function renderItems(){
-    while (pop.children.length > 2) pop.removeChild(pop.lastChild);
-    const selSet = selected === '*' ? new Set(options) : new Set(selected);
-    options.forEach(name => {
-      const row = document.createElement('div');
-      row.className='gf-item';
-      row.setAttribute('role','option');
-      row.setAttribute('aria-selected', selSet.has(name) ? 'true' : 'false');
-      row.innerHTML = `<span class="gf-check">${selSet.has(name)?'✓':''}</span><span class="gf-name" title="${name}">${name}</span>`;
-      row.addEventListener('click', () => {
-        let s = selected === '*' ? new Set(options) : new Set(selected);
-        if (s.has(name)) s.delete(name); else s.add(name);
-        selected = s.size === 0 ? '*' : s;
-        updateButtonLabel(); renderItems(); notify();
-      });
-      pop.appendChild(row);
-    });
-  }
-  function updateButtonLabel(){
-    if (!btn) return;
-    if (selected === '*') { btn.textContent = 'すべて'; return; }
-    const n = selected.size;
-    btn.textContent = (n === 1) ? Array.from(selected)[0] : `${n}項目`;
-  }
-  function getSelection(){ return selected === '*' ? '*' : new Set(selected); }
-  function setSelection(v){ selected = (v === '*') ? '*' : new Set(v); updateButtonLabel(); renderItems(); }
-
-  let onChange = null;
-  function notify(){ if (typeof onChange === 'function') onChange(getSelection()); }
-
-  return { init, setOptions, getSelection, setSelection, open, close, set onChange(fn){ onChange=fn; } };
-})();
-document.addEventListener('DOMContentLoaded', () => RarityFilter.init());
-
-// === 共通: ポップオーバーを body にポータル表示して位置決め ===
-function openFloatingPopover(wrapEl, btnEl, popEl){
-  // 既に開いていたら一旦リセット
-  if (!wrapEl || !btnEl || !popEl) return () => {};
-  // body 直下へ移動
-  document.body.appendChild(popEl);
-  popEl.classList.add('floating');
-  popEl.style.visibility = 'hidden';
-  popEl.style.display = 'block';
-
-  function place(){
-    const r = btnEl.getBoundingClientRect();
-    const margin = 8;
-    // 横幅はボタン以上
-    popEl.style.minWidth = Math.max(r.width, 160) + 'px';
-    // 一旦配置して高さ計測
-    popEl.style.left = Math.round(r.left) + 'px';
-    popEl.style.top  = Math.round(r.bottom + margin) + 'px';
-    const ph = popEl.offsetHeight;
-    // 下に入らなければ上に出す
-    let top = r.bottom + margin;
-    if (top + ph > window.innerHeight) {
-      top = Math.max(8, r.top - ph - margin);
-    }
-    // 右端はみ出し補正
-    let left = r.left;
-    const pw = popEl.offsetWidth;
-    if (left + pw > window.innerWidth - 8) {
-      left = Math.max(8, window.innerWidth - pw - 8);
-    }
-    popEl.style.left = Math.round(left) + 'px';
-    popEl.style.top  = Math.round(top) + 'px';
-  }
-  place();
-  popEl.style.visibility = '';
-
-  // スクロール/リサイズで追従
-  const onMove = () => place();
-  window.addEventListener('scroll', onMove, true);
-  window.addEventListener('resize', onMove);
-
-  // ESCで閉じる
-  const onKey = (e)=>{ if(e.key==='Escape') cleanup(); };
-  window.addEventListener('keydown', onKey);
-
-  // 後処理（元の位置へ戻す）
-  function cleanup(){
-    window.removeEventListener('scroll', onMove, true);
-    window.removeEventListener('resize', onMove);
-    window.removeEventListener('keydown', onKey);
-    popEl.classList.remove('floating');
-    popEl.style.cssText = '';
-    wrapEl.appendChild(popEl);
-  }
-  return cleanup;
-}
-
 /* ====== JSON 読み込み／UI 再描画 ====== */
 function handleFiles(files){ if(!files||!files.length) return; const f=files[0]; const rd=new FileReader(); rd.onload=()=>{ try{ onJsonLoaded(JSON.parse(rd.result)); startDone(); }catch(err){ alert("JSONの解析に失敗: "+err.message);} }; rd.readAsText(f,"utf-8"); }
 
@@ -1423,18 +1103,6 @@ function rebuildGachaCaches(){
     }
   }
 }
-
-// 現在のガチャ選択を取得：'*' or Set<string>
-function getSelectedGachas(){
-  return GachaFilter.getSelection();
-}
-
-function getSelectedRarities(){
-  return RarityFilter.getSelection();
-}
-
-// '*（すべて）' と他ガチャを同時に選べた時の調停 & 空選択のフォールバック
-function normalizeGachaSelection(){ /* no-op: 独自UIで整合済み */ }
 
 function renderTabs(){
   const tabs=$("#gachaTabs"); if(!tabs) return;
@@ -2795,6 +2463,10 @@ document.addEventListener('keydown', (e) => {
     bumpFab();
   }
 });
+</script>
+<script type="module">
+  import { initFilters } from "/src/filters.js";
+  initFilters();
 </script>
 <button id="gachaFab" type="button" class="btn gacha-fab">ガチャを引く</button>
 </body>
